Contact Us overflow fixed

--- a/style.css
+++ b/style.css
@@ -482,4 +482,5 @@ footer {
 
 .right-contact {
     width: 100%;
+    max-width: 40em;
 }
